--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">News</string>
+    <string name="not_found">Data Not Found</string>
+    <string name="all_article_loaded">All Article Has Loaded</string>
+
 
     <string-array name="categories_array">
         <item>All</item>
