--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">News</string>
     <string name="not_found">Data Not Found</string>
     <string name="all_article_loaded">All Article Has Loaded</string>
-
+    <string name="source_notes">NOTES: endless scroll is not implemented on this page because the endpoint "https://newsapi.org/v2/sources" does not support pagination parameters</string>
+    <string name="hint_search">Search Article</string>
 
     <string-array name="categories_array">
         <item>All</item>
